examples/test/testpolicy17297.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17297
  namespace: namespace42
spec:
  podSelector:
    matchLabels:
      key12: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value12
          key30: value1
          key10: value36
      podSelector:
        matchLabels:
          key7: value40
          key1: value17
